tests/baselines/reference/parserES5ComputedPropertyName10.errors.txt
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName10.ts(2,4): error TS1164: Computed property names are not allowed in class property declarations.


==== tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName10.ts (1 errors) ====
    class C {
       [e] = 1
       ~~~
!!! error TS1164: Computed property names are not allowed in class property declarations.
    }